--- a/styles/opportunities.less
+++ b/styles/opportunities.less
@@ -149,6 +149,9 @@
       line-height: 2rem;
       text-align: center;
     }
+    h2 {
+      margin-right: 3rem;
+    }
   }
 
   h2,
